
    - debian/locales/DEBIAN/templates: Add a description "what is the
      locale?". (Closes: #119197)
    - debian/locales/DEBIAN/templates: Introducing new templates format
      with po-debconf. 
    - debian/packages.d/locales.mk: likewise.
    - debian/locales/DEBIAN/po/*: likewise.
    - debian/control.in/main: Build-Depends-Indep: po-debconf.

 -- GOTO Masanori <gotom@debian.or.jp>  Wed, 26 Feb 2003 18:44:08 +0900

glibc (2.3.1-14) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/glibc23-cmov.dpatch: Fix hwcap condition code again,
      previous version did not work properly under some situation.
    - debian/sysdeps/depflags.pl: Fix libnss-db dependency from << 2.2-6 
      to <= 2.2-6.1.1, because the first version of libnss-db to work
      with libc6 2.3 is 2.2-6.1, and 2.2-6.2 works under all architectures
      correctly.  Suggested by Ryan Murray <rmurray@cyberhqz.com>.
      (Closes: #181834)
    - debian/sysdeps/depflags.pl: Fix libc6.postinst breakage with file-rc
      (<< 0.7.0), now libc6 conflicts them.  (Closes: #181683, #182320)

 -- GOTO Masanori <gotom@debian.or.jp>  Fri, 21 Feb 2003 09:19:45 +0900

glibc (2.3.1-13) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/libc/DEBIAN/postinst: Replace from "/usr/lib/file-rc" to
      "/usr/share/file-rc" to follow up file-rc 0.7.
      (Closes: #181551, #181556, #181606)
    - debian/libc/etc/init.d/devpts.sh: Fix devpts.sh failure if
      $devfs_mounted is empty. (Closes: #181541, #181591)

 -- GOTO Masanori <gotom@debian.or.jp>  Wed, 19 Feb 2003 09:26:17 +0900

glibc (2.3.1-12) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/glibc23-malloc-check.dpatch: Fix hppa MALLOC_CHECK_
      invalid pointer problem.  (Closes: #177242)
    - debian/patches/libgcc-compat-sparc.dpatch: Fix sparc libgcc compat
      symbol problem.  Patched by Guido Guenther <agx@debian.org>
      (Closes: #178645)