@@ -26,11 +26,17 @@ set_timezone() {
 #	Function like update-rc.d but simpler & faster.
 #	Usage: updatercd basename start|stop NN runlevel .
 #
-#	Uses the real update-rc.d if file-rc is detected.
+#	Now we use the real update-rc.d, so now this function should
+#	be equivalent to /usr/sbin/update-rc.d.
 #
 updatercd() {
 
-	if [ -d /usr/share/file-rc/. ]
+	if [ ! -f /etc/init.d/$1 ]
+	then
+		return
+	fi
+
+	if [ -x /usr/sbin/update-rc.d ]
 	then
 		update-rc.d "$@" > /dev/null
 		return $?
@@ -178,7 +184,7 @@ then
 	    check="$check inetd"
 	    rl=$(runlevel | awk '{print $2}')
 	    for service in $check; do
-		if [ -f /usr/share/file-rc/rc -a -f /etc/runlevel.conf ]; then
+		if [ -f /usr/share/file-rc/rc -o -f /usr/lib/file-rc/rc ] && [ -f /etc/runlevel.conf ]; then
 		    idl=$(filerc $rl $service)
 		else
 		    idl=$(ls /etc/rc${rl}.d/S??${service} 2> /dev/null | head -1)
