@@ -19,6 +19,12 @@ glibc (2.3.1-15) unstable; urgency=low
     - debian/locales/DEBIAN/po/*: likewise.
     - debian/control.in/main: Build-Depends-Indep: po-debconf.
 
+    - debian/sysdeps/depflags.pl: Remove conflicts: file-rc (<< 0.7.0)
+    - debian/libc/DEBIAN/postinst: Use /usr/sbin/update-rc.d in updatercd(),
+      suggested by Anthony Towns <aj@azure.humbug.org.au>.
+    - debian/libc/DEBIAN/postinst: Check /usr/{lib,share}/file-rc/
+      because file-rc >= 0.7.0 does not use /usr/lib/file-rc.
+
  -- GOTO Masanori <gotom@debian.or.jp>  Wed, 26 Feb 2003 18:44:08 +0900
 
 glibc (2.3.1-14) unstable; urgency=low
